--- a/resources/js/badaso/scss/custom.scss
+++ b/resources/js/badaso/scss/custom.scss
@@ -52,7 +52,9 @@ a:hover {
     margin-bottom: 0px !important;
 }
 
-
+.con-vs-dialog.badaso-loader {
+    z-index: 9999999 !important;
+}
 
 .modal {
     z-index: 99999 !important;
